--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -116,8 +116,24 @@
                 </div>
             {{/if}}
         </div>
-        
     </div>
+
+    <section class="contact-map">
+        <div class="contact-map__header">
+            <h3 class="contact-map__title">Find Store Location Near you</h3>
+            <p class="contact-map__text">
+                We have 06 stores throughout “Country” and more in works. Complete the search details below to find a Ella store near you.
+            </p>
+
+            <a href="#" class="button button--primary contact-map__button uppercase">
+                Find A Store
+            </a>
+        </div>
+
+        <div class="contact-map__content">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3085.738794206089!2d-84.45077818771225!3d39.33950317151481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88404fe5f04a2c7f%3A0x5bdd3dda5643e883!2s8694%20Rite%20Track%20Way%2C%20West%20Chester%20Township%2C%20OH%2045069!5e0!3m2!1sen!2sus!4v1697721362557!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 </main>
 
 {{/partial}}
