Done Format Infomation Page

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -576,6 +576,14 @@
     margin-right: auto;
 }
 
+.container-1440 {
+    width: 100%;
+    max-width: 1470px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 15px;
+}
+
 .container-1200 {
     width: 100%;
     max-width: 1230px;
