--- a/assets/scss/halo.scss
+++ b/assets/scss/halo.scss
@@ -132,7 +132,7 @@
                     font-size: 18px;
                     font-style: normal;
                     font-weight: 800;
-                    line-height: 120%; /* 21.6px */
+                    line-height: 120%;
                     display: flex;
                     justify-content: space-between;
                     cursor: pointer;
@@ -1186,18 +1186,124 @@
 }
 
 /* Information Page */
-.cms_page {
+.custom-infomatio-page {
     .cms_left {
-        &.is-sticky {
-            position: fixed;
-            top: 20%;
+        width: 25%;
+        max-width: 350px;
+        padding-left: 18px;
+        padding-right: 32px;
+        
+        .custom-list-title {
+            max-height: 60vh;
+            overflow: auto;
+    
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+            
+            /* Track */
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+            }
+            
+            /* Handle */
+            &::-webkit-scrollbar-thumb {
+                background: #000000;
+    
+            }
+            
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: #A594F9;
+            }
+        }
 
-            @media (max-width: 990px) {
-                top: 0;
-                background-color: #ffffff;
+        @media (max-width: 990px) {
+            width: 100%;
+            max-width: 100%;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            left: -100%;
+            bottom: 0;
+            position: fixed;
+            background-color: #ffffff;
+            transition: all 0.3s linear;
+           
+
+            .custom-list-title {
+                max-height: 100vh;
+            }
+
+            &.is-open {
+                inset: 0;
+                z-index: 999999;
+            }
+
+        }
+
+        &.is-sticky {
+            top: 0%;
+
+            @media (min-width: 991px) {
+                position: fixed;
+                top: 18%;
+                // z-index: -1;
             }
         }
         
+        .info-close-sidebar {
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            cursor: pointer;
+            width: 24px;
+            height: 24px;
+
+            @media (min-width: 991px) {
+                display: none;
+            }
+        }
+
+        .info-open-sidebar {
+            position: absolute;
+            top: 0;
+            right: -36px;
+            cursor: pointer;
+            width: 36px;
+            height: 36px;
+            display: inline-block;
+            border: 1px solid #A594F9;
+
+            @media (max-width: 520px) {
+                top: 10%;
+            }
+
+            @media (max-width: 400px) {
+                top: 20%;
+            }
+
+            svg {
+                transform: rotate(-90deg);
+            }
+
+            @media (min-width: 991px) {
+                display: none;
+            }
+        }
+    }
+
+    .cms_right {
+        width: 75%;
+        max-width: 1090px;
+        padding-left: 32px;
+        padding-right: 18px;
+
+        @media (max-width: 990px) {
+            width: 100%;
+            max-width: 100%;
+            padding-left: 0;
+            padding-right: 0;
+        }
+
     }
 
     .custom-list-title {
@@ -1206,14 +1312,63 @@
 
         > a {
             display: inline-block;
-            padding: 6px 12px;
+            padding: 10px 12px;
             padding-left: 17px;
-            border-left: 2px solid #cccccc;
-            
+            border-left: 1px solid #cccccc;
+            font-size: 16px;
+            line-height: 24px;
+            color: #000000;
 
             &.is-active {
                 border-left: 3px solid #000000;
             }
+        }
+    }
+
+    /* Content */
+    .midwest_seasalt_cms {
+        h3 {
+            font-size: 30px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.3333;
+            font-family: Mulish;
+            margin-top: 0;
+            margin-bottom: 16px;
+        }
+
+        h4 {
+            color: #212326;
+            font-family: Mulish;
+            font-size: 1.125em;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 120%;
+            text-transform: capitalize;
+            margin-bottom: 0.6666666667em;
+            line-height: 1.33333125;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 16px;
+            font-family: Mulish;
+        }
+
+        a {
+            color: #88dad9;
+        }
+
+        table {
+            margin-bottom: 16px;
+        }
+
+        p:has(img) {
+            float: left;
+            margin-bottom: 0;
+            padding-right: 12px;
+            padding-bottom: 12px;
         }
     }
 }
