--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -16,6 +16,8 @@
     background-color: $footer-background;
     border-top: container("border");
     padding: spacing("double") 0;
+    position: relative;
+    z-index: 1;
 }
 
 .footer-info {
