--- a/templates/pages/custom/page/information-new-layout.html
+++ b/templates/pages/custom/page/information-new-layout.html
@@ -5,7 +5,7 @@
 <main class="cms_page cms_left_menus custom-infomatio-page page">
 	<div class="main_cate">
 		<div class="container-1440">
-			<h1 class="text-center custom-heading text-blue pb-60">{{page.title}}</h1>
+			<h1 class="text-center custom-heading text-blue pb-60 pb-0-mb">{{page.title}}</h1>
 			<div class="information__block">
 				<div class="cms_left">
 					<ul class="cms_cat_list custom-list-title">
