--- a/templates/components/common/navigation-megamenu.html
+++ b/templates/components/common/navigation-megamenu.html
@@ -331,9 +331,9 @@
 		</div>
 	</div>
 </li>
-<li class="navPages-item">	
-	<a class="navPages-action" href="javascript:void(0)">Private label</a>
-	<div class="megamenu_block menu_private">
+<li class="navPages-item navPagse-item--custom">	
+	<a class="navPages-action" href="/private-label-2/">Private label</a>
+	<div style="display: none;" class="megamenu_block menu_private">
 		<div class="container">
 			<div class="mm_inner">
 				<div class="all_link">
@@ -393,9 +393,9 @@
 		</div>
 	</div>
 </li>
-<li class="navPages-item">	
-	<a class="navPages-action" href="javascript:void(0)">Bulk & Wholesale</a>
-		<div class="megamenu_block menu_bulk">
+<li class="navPages-item navPagse-item--custom">	
+	<a class="navPages-action" href="/bulk-wholesale-2/">Bulk & Wholesale</a>
+	<div style="display: none;" class="megamenu_block menu_bulk">
 		<div class="container">
 			<div class="mm_inner">
 				<div class="all_link">
