--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -195,7 +195,7 @@
 .custom-text {
     color: #000;
     font-family: Mulish, sans-serif;
-    font-size: 18px;
+    font-size: clamp(14px, 2vw, 18px);
     font-style: normal;
     font-weight: 500;
     line-height: 30px; 
@@ -206,6 +206,10 @@
     width: 100%;
     max-width: 520px;
     flex: 0 0 30%;
+
+    @media (max-width: 767px) {
+        max-width: 100%;
+    }
 
     &-full {
         max-width: 100%;
@@ -356,6 +360,10 @@
 
 .pt-40 {
     padding-top: 40px;
+}
+
+.pb-20 {
+    padding-bottom: 20px;
 }
 
 .m-0 {
@@ -555,9 +563,23 @@
         padding-bottom: 0 !important;
     }
 
+    .p-0-mb {
+        padding: 0 !important;
+    }
+
+    .mb-0-mb {
+        margin-bottom: 0 !important;
+    }
+
     .flex-unset-mb {
         flex: unset;
     }
+}
+
+.container-full {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container-1920 {
@@ -595,8 +617,25 @@
 
 .container:has(.container-1810),
 .container:has(.container-1920) {
-    max-width: 1920px;
+    // max-width: 1920px;
+    max-width: 100%;
     padding: 0;
+
+    .custom-section {
+        padding: 0;
+
+        .container-1920 {
+            padding: 60px 60px 80px;
+
+            @media (max-width: 1024px) {
+                padding: 40px 20px 60px;
+            }
+        }
+
+    }
+}
+.container-1920:has(.Braedcrumbs) {
+    max-width: 100%;
 }
 
 .body:has(.container-1810),
