--- a/templates/pages/custom/page/custom-bulk-wholesale-page.html
+++ b/templates/pages/custom/page/custom-bulk-wholesale-page.html
@@ -33,7 +33,7 @@
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-reverse-mb">
             <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb">WHAT IS BULK & WHOLESALE</h3>
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">WHAT IS BULK & WHOLESALE</h3>
                 <p class="custom-text text-center-mb text-white">
                     We first want to start with the definition of bulk and wholesale as often this is confused with private labeling. Our Bulk and Wholesale program consists of formulas that are sold in large quantities. So, if you are looking for a custom formula or a stock formula but don’t need retail packaging then this would fall under our bulk & wholesale program. This program is popular with hospitality end users, spa owners, as well as companies that want to do their packaging. If you would like to complete the final retail product and just need great formulas, then you have found the last company you will ever need.
                 </p>
@@ -51,11 +51,11 @@
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-mb">
             <div class="block-image">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities.png" class="img-cover" alt="Minimum Order Quantities">
+                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities1.png" class="img-cover" alt="Minimum Order Quantities">
             </div>
 
             <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb">MINIMUM ORDER QUANTITIES</h3>
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">MINIMUM ORDER QUANTITIES</h3>
                 <p class="custom-text text-center-mb">
                     This is usually the first question that gets asked regarding ordering in bulk and wholesale. You can order products from us in any quantity, but our discounted pricing starts at 250 pounds per SKU (variation). Just like with our private label program, our bulk program allows you to have fully customized blends tailored to your needs. We make every product to order, so you have full control over any specific formulation requirements. Request our pricelist above and get a detailed brochure and our pricelist.
                 </p>
@@ -69,7 +69,7 @@
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-reverse-mb">
             <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb">ABOUT US</h3>
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">ABOUT US</h3>
                 <p class="custom-text text-center-mb text-white">
                     So, do you need bath & body products in bulk? Our bulk and wholesale department at The Midwest Sea Salt Company is the best you will find. Our 50,000-square-foot automated facility consistently manufactures and ships bulk products daily. We supply some of the largest companies in the world who do not need retail packaged products. Either these clients will package themselves or they will use the bulk products in their day-to-day operations. We are here to do as much or as little as you need us to. So, if you run a thriving bed & breakfast, a hotel chain, a spa, or just want to save cost and package and label products yourself, you have come to the right place.
                 </p>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb">About Our Products</h3>
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">About Our Products</h3>
                 <p class="custom-text text-center-mb">
                     Our products are made to the highest standard in our fully automated facility. We can source exotic ingredients and deal with complex formulation needs. So, if you need your product all-natural, organic, paraben-free, etc. we can accommodate your request. It is our goal to take your vision for your formula and bring it to reality. Quality, value, and consistency are at the core of our Bulk and Wholesale divisions. We have dedicated formulators, project managers, and QC experts who work to fulfill your every bulk need. 
                 </p>
@@ -101,7 +101,22 @@
 </section>
 
 <!-- Iframe -->
+<section class="custom-section bg-black rounded-top mt-30">
+    <div class="container-1920">
+        <div class="flex flex-center-y flex-col-reverse-mb">
+            <div class="block-content max-wfull-mb">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">WHOLESALE <br> PRODUCTS W/ FAIRE</h3>
+                <p class="custom-text text-center-mb text-white">
+                    If you are looking to purchase our retail products Wholesale, we have partnered with Faire to offer 50% off retail pricing to the Faire platform.
+                </p>
+            </div>
 
+            <div class="block-image pl-40 pl-0-mb">
+                <iframe src="https://www.faire.com/embed/bw_c9eap3qtv3" width="900" height="600" scrolling="no" style="margin:0 auto;border:none;display:block;max-width:100%;width:900px;height:600px;"></iframe>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Section Frequently Asked Questions - Private Label -->
 <section class="custom-section bg-violet mt-30 rounded-top">
