--- a/templates/pages/custom/page/custom-private-label-page.html
+++ b/templates/pages/custom/page/custom-private-label-page.html
@@ -46,82 +46,14 @@
     </div>
 </section>
 
-<!-- Section Minimum Order Quantities -->
-<section class="custom-section bg-white rounded-top mt-30">
-    <div class="container-1920">
-        <div class="flex flex-center-y flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb">Minimum Order Quantities</h3>
-                <p class="custom-text text-center-mb">
-                    We wanted to create a dedicated section for this as it is usually a common initial question. We have the lowest MOQ in the industry for a fully automated facility that manufactures to our standard. For products in a jar or a bottle, the MOQ is 500 units per variation. If we are creating custom pouches for you, which we can do in-house, the MOQ is 1000 units per variation. It is important to us to try and lower the barriers to entry to this market and our MOQ certainly helps us live up to that initiative.
-                </p>
-            </div>
-
-            <div class="block-image pl-40 pl-0-mb">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities.png" class="img-cover" alt="Minimum Order Quantities">
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Section Getting started -->
-<section class="custom-section bg-black rounded-top mt-30">
-    <div class="container-1920">
-        <div class="flex flex-wrap flex-col-reverse-mb">
-            <div class="flex flex-col-mb">
-                <div class="block-content pb-60 pb-20-tl pr-60 pr-20-tl">
-                    <h3 class="custom-heading text-blue">Getting started</h3>
-                    <p class="custom-text text-white">
-                        The experienced staff at The Midwest Sea Salt Company is ready to help you determine the best options and solutions for your professional skin care line. The following provides a basic outline of the steps we follow with each client.
-                    </p>
-                </div>
-                <div class="block-image pb-60 pb-0-mb">
-                    <ul class="flex flex-col flex-wrap ml-0 grid no-gap mb-0">
-                        <div class="row">
-                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
-                                <li class="text-white">
-                                    <strong>Project Definition</strong> - in this phase you will interact with our Director of Business development - either in our showroom or by phone. In this meeting we will review your project, your brand, your time-line and your goals. Our focus is to ensure we understand your vision of what you are hoping to achieve for your customers and your business.
-                                </li>
-                            </div>
-                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
-                                <li class="text-white">
-                                    <strong>Scenting Options</strong> - While many of our products have a wonderfully natural scent from the organic and natural ingredients used, we understand the importance of offering different and beautiful scents for bath, body and some skin care products. We manufacture all our fragrances in house and have an array of 3500 fragrances to choose from. We offer fragrance oils and essential oils as well. We are sure to have something that tickles your fancy and all our fragrance oils are phthalate free fragrances.
-                                </li>
-                            </div>
-                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
-                                <li class="text-white">
-                                    <strong>Labeling Options</strong> - When it comes to labeling your product we only use the best, no matter the quantity. We use full color offset printing using water proof labels with lamination for every label. This is usually the first thing that your customers will see so we make sure you put your best foot forward. We do offer screen printing services as well. Your project specialists will work with you to provide you with the best option to meet your needs.
-                                </li>
-                            </div>
-                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
-                                <li class="text-white">
-                                    <strong>Product Selection</strong> - Based on your objectives and budget we will help you identify the best product selection for your skin care line. If we don’t currently offer what you are looking for, we usually can manufacture it for you.
-                                </li>
-                            </div>
-                            <div class="col l-2 m-2 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl">
-                                <li class="text-white">
-                                    <strong>Packaging Options</strong> - A key component to the success of your new line will be the packaging you choose. The only thing in the process that we may outsource is packaging. Being that every customer we work with has a different vision, we source our jars, bottles and tops from the largest distributor in the United States. We source a wide range of quality recyclable PET, glass and aluminum packaging choices for our clients. We also manufacture “in-house” custom printed flexible packaging, as well as custom printed tubes. We will present you with the best options available to meet your budget and branding goals.
-                                </li>
-                            </div>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-            <div class="block-image-full">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/getting-started.png" alt="Getting started image">
-            </div>
-        </div>
-    </div>
-</section>
-
 <!-- Section About Us -->
 <section class="custom-section custom-section--about-us bg-white rounded-top mt-30">
     <div class="container-1920">
         <div class="custom-section-about-us">
             <div class="about-us__item about-us__item--top flex flex-center-y pb-60 pb-20-tl flex-col-reverse-mb">
-                <div class="item item__left">
-                    <h4 class="text-blue item__heading">About Us</h4>
-                    <p class="item__desc pr-0-mb">
+                <div class="item item__left pr-0-mb">
+                    <h4 class="text-blue item__heading text-center-mb mb-0-mb">About Us</h4>
+                    <p class="item__desc pr-0-mb text-center-mb">
                         Starting from scratch to develop your skincare or cosmetics lines can be difficult, time-consuming, and extremely costly. You can bring your concept to The Midwest Sea Salt Company Inc. rather than starting from scratch. You can significantly reduce your effort by partnering with a seasoned private label manufacturer who specializes in skincare formulation, product design, packaging, packing, and delivery. We will assist you in ensuring that goods are produced consistently for your brand.
                     </p>
                 </div>
@@ -137,7 +69,7 @@
                 </div>
 
                 <div class="item item__right pl-0-mb pt-20-tl">
-                    <p class="item__desc">
+                    <p class="item__desc text-center-mb">
                         We manufacture more than 18,000 SKUs and private label for more than 500+ companies. We cover the range from startups, all the way to Fortune 500 hospitality entities. Our clients' products cover the market, in retailers such as Whole Foods, Amazon, Walmart, Trader Joe's, Sephora, Target, Ulta, Sally’s, Dermstore, Nordstrom, Neiman Marcus, Walgreens, CVS, Rite-Aid… and so many more. 
                     </p>
                 </div>
@@ -146,24 +78,42 @@
     </div>
 </section>
 
-<!-- INITIAL COST OUTLAY -->
+<!-- Section Minimum Order Quantities -->
 <section class="custom-section bg-black rounded-top mt-30">
+    <div class="container-1920">
+        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">Minimum Order Quantities</h3>
+                <p class="custom-text text-white text-center-mb">
+                    We wanted to create a dedicated section for this as it is usually a common initial question. We have the lowest MOQ in the industry for a fully automated facility that manufactures to our standard. For products in a jar or a bottle, the MOQ is 500 units per variation. If we are creating custom pouches for you, which we can do in-house, the MOQ is 1000 units per variation. It is important to us to try and lower the barriers to entry to this market and our MOQ certainly helps us live up to that initiative.
+                </p>
+            </div>
+
+            <div class="block-image">
+                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities.png" class="img-cover" alt="Minimum Order Quantities">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- INITIAL COST OUTLAY -->
+<section class="custom-section bg-white rounded-top mt-30">
     <div class="container-1920">
         <div class="flex flex-wrap flex-col-reverse-mb">
             <div class="flex flex-col-mb">
-                <div class="block-content max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1">
-                    <h3 class="custom-heading text-blue">INITIAL <br class="hide-on-mobile"> COST OUTLAY</h3>
+                <div class="block-content max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1 p-0-mb">
+                    <h3 class="custom-heading text-blue text-center-mb mb-0-mb">INITIAL <br class="hide-on-mobile"> COST OUTLAY</h3>
                 </div>
                 <div class="block-image pb-60 pb-0-mb">
                     <div class="flex flex-col flex-wrap ml-0 grid no-gap mb-0">
                         <div class="row">
                             <div class="col l-2 m-1 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl max-640 wfull flex-1 pl-0-mb">
-                                <p class="text-white">
+                                <p class="custom-text text-center-mb">
                                     This is where we outshine our competition and any other custom manufacturer of skincare products. Being that our MOQ is already an industry minimum, you had better believe that the initial cost outlay is an industry-breaking low as well. Our full private labeling service projects start at roughly $2500 and can go up from there depending on the product you are  trying to make. So, for example, a 16oz bath salt with a full custom formula at 500 units with your custom label would start at about $2500.
                                 </p>
                             </div>
                             <div class="col l-2 m-1 s-1 pl-60 pb-40 pl-20-tl pb-20-tl max-580 pl-0-mb">
-                                <p class="text-white">
+                                <p class="custom-text text-center-mb">
                                     On the other end of the spectrum, a Dead Sea mud mask would cost roughly $3500 for a full complete product. The price varies widely depending on what you need us to make. Please note that we manufacture a product based on your needs and we are not selling you a premade product. We can go as mild or as wild as you need us to.
                                 </p>
                             </div>
@@ -178,14 +128,33 @@
     </div>
 </section>
 
+<!-- Section Getting started -->
+<section class="custom-section bg-black rounded-top mt-30">
+    <div class="container-1920">
+        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">GETTING STARTED</h3>
+                <p class="custom-text text-white text-center-mb">
+                    This is the easy part. Fill out the form to download our brochure and pricelist and then send us an email with your ideas. It is really that simple. That is all it takes. We will take your idea and needs and create a project scope that outlays all the product details and the cost associated with the project. What’s stopping?
+                </p>
+            </div>
+
+            <div class="block-image">
+                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/packaging-and-labeling.png" class="img-cover" alt="GETTING STARTED">
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <!-- PACKAGING AND LABELING -->
 <section class="custom-section bg-white rounded-top mt-30 custom-section-two-block">
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-reverse-mb">
             <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb">PACKAGING AND LABELING</h3>
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">PACKAGING AND LABELING</h3>
                 <p class="custom-text text-center-mb">
-                    This is where we outshine our competition and any other custom manufacturer of skincare products. Being that our MOQ is already an industry minimum, you had better believe that the initial cost outlay is an industry-breaking low as well. Our full private labeling service projects start at roughly $2500 and can go up from there depending on the product you are  trying to make. So, for example, a 16oz bath salt with a full custom formula at 500 units with your custom label would start at about $2500.
+                    We pride ourselves on being a one-stop shop should you require it. With that being said, we can procure all your packaging and print your labels in-house. You can also supply us with these components as well. Whether you need PET plastic, glass, or interior seals, we can handle it all for you.
                 </p>
             </div>
 
@@ -201,8 +170,8 @@
     <div class="container-1920">
         <div class="flex flex-row-reverse flex-center-y flex-col-reverse-mb">
             <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb">PRIVATE LABEL - READY</h3>
-                <p class="custom-text text-center-mb text-white">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">PRIVATE LABEL - READY</h3>
+                <p class="custom-text text-center-mb text-white pb-20">
                     A new program that has become very popular is our private label-ready program. So, what if you are not ready to order 500 units of a single SKU because you are just starting, or your budget just doesn’t allow it? No worries at all. Everyone must start somewhere, and we have a new program just for you. It is an entry point to private labeling that will reduce the MOQ to six units but will require you to label the product.
                 </p>
 
