--- a/templates/components/common/navigation-megamenu.html
+++ b/templates/components/common/navigation-megamenu.html
@@ -467,16 +467,16 @@
 							<a href="/our-company/">Our company</a>
 						</li>						
 						<li>
-							<a href="/shipping-returns/">Shipping and returns</a>
+							<a href="/shipping-returns-2/">Shipping and returns</a>
 						</li>
 						<li>
                             <a href="/affiliate-program/">Rewards Program</a>
                         </li>
 						<li>
-                            <a href="/privacy-policy/">Privacy Policy</a>
+                            <a href="/privacy-policy-2/">Privacy Policy</a>
                         </li>
 						<li>
-							<a href="/trademarks/">Trademarks</a>
+							<a href="/trademarks-2/">Trademarks</a>
 						</li>
 					{{!--	<li>
 							<a href="https://affiliates.midwestseasaltcompany.com/" target="_blank">Become an Affiliate</a>
