--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -97,19 +97,17 @@
                             </p>
     
                             <p class="contact-form-text">
-                                685 Market Street
+                                8694 Rite Track Way
                                 <br>
-                                San Francisco, CA 94105,
+                                West Chester, Ohio 45069
                                 <br>
                                 United States
                             </p>
-    
+
                             <p class="contact-form-text">
                                 Opening Hours
                                 <br>
-                                MON to SAT: 9:00 AM - 10:00 PM
-                                <br>
-                                SUN: 10:00 AM - 6:00 PM
+                                MON to FRI: 8:00 AM - 17:00 PM
                             </p>
                         </div>
                     </div>
