--- a/templates/pages/custom/page/about-us-layout.html
+++ b/templates/pages/custom/page/about-us-layout.html
@@ -260,15 +260,14 @@
                         </p>
 
                         <p class="banner__text">
-                            685 Market Street
-                            San Francisco, CA 94105,
+                            8694 Rite Track Way
+                            West Chester, Ohio 45069
                             United States
                         </p>
 
                         <p class="banner__text">
                             Opening Hours
-                            MON to SAT: 9:00 AM - 10:00 PM
-                            SUN: 10:00 AM - 6:00 PM
+                            MON to FRI: 8:00 AM - 17:00 PM
                         </p>
                     </div>
 
