--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -378,69 +378,10 @@
           </ul>
         </li>
         <li class="shop">
-          <a class="navPages-action" href="javascript:void(0)">Private label</a>
-          <ul>
-            <li>
-              <a href="/private-label/">Private label</a>
-            </li>
-            <li>
-              <a href="/getting-started/">Getting started</a>
-            </li>
-            <li>
-              <a href="/about-our-products/">About our products</a>
-            </li>
-            <li>
-              <a href="/packaging-and-labeling/">Packaging and labeling</a>
-            </li>
-            <li>
-              <a href="/additional-services/">Additional services</a>
-              <ul>
-          <li>
-            <a href="/private-label-ready-program/">Private Label Ready Program</a>
-          </li>									
-        </ul>
-            </li>
-            <li>
-              <a href="/private-label-frequently-asked-questions/">Frequently asked questions</a>
-            </li>
-            <li>
-              <a href="/private-label-request-custom-quote/">Download price list</a>
-            </li>
-            <li>
-              <a href="/private-label-request-custom-quote/">Request custom quote</a>
-            </li>
-          </ul>
+          <a class="navPages-action" href="/private-label-2/">Private label</a>
         </li>
         <li class="shop">
-          <a class="navPages-action" href="javascript:void(0)">Bulk &amp; Wholesale</a>
-          <ul>
-            <li>
-              <a href="/bulk-wholesale/">Bulk & Wholesale</a>
-            </li>
-            <li>
-              <a href="/bulk-wholesale-getting-started/">Getting started</a>
-            </li>
-            <li>
-              <a href="/about-our-products/">About our products</a>
-            </li>
-            <li>
-              <a href="/bulk-wholesale-additional-services/">Additional services</a>
-            </li>
-            <li>
-              <a href="/bulk-and-wholesale-frequently-asked-questions/">Frequently asked questions</a>
-            </li>
-            <li>
-                <a href="/wholesale-products-through-faire/">Wholesale Products W/ Faire</a>
-                <ul>
-                    <li>
-                      <a href="/bulk-and-wholesale-request-custom-quote/">Download price list</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-              <a href="/bulk-and-wholesale-request-custom-quote/">Request custom quote</a>
-            </li>
-          </ul>
+          <a class="navPages-action" href="/bulk-wholesale-2/">Bulk &amp; Wholesale</a>
         </li>
         <li class="shop">
           <a class="navPages-action" href="javascript:void(0)">Information</a>
