--- a/templates/pages/custom/page/custom-bulk-wholesale-page.html
+++ b/templates/pages/custom/page/custom-bulk-wholesale-page.html
@@ -101,7 +101,7 @@
 </section>
 
 <!-- Iframe -->
-<section class="custom-section bg-black rounded-top mt-30">
+<!-- <section class="custom-section bg-black rounded-top mt-30">
     <div class="container-1920">
         <div class="flex flex-center-y flex-col-reverse-mb">
             <div class="block-content max-wfull-mb">
@@ -116,7 +116,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- Section Frequently Asked Questions - Private Label -->
 <section class="custom-section bg-violet mt-30 rounded-top">
