--- a/templates/pages/custom/page/custom-private-label-page.html
+++ b/templates/pages/custom/page/custom-private-label-page.html
@@ -101,7 +101,7 @@
     <div class="container-1920">
         <div class="flex flex-wrap flex-col-reverse-mb">
             <div class="flex flex-col-mb">
-                <div class="block-content max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1 p-0-mb">
+                <div class="max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1 p-0-mb">
                     <h3 class="custom-heading text-blue text-center-mb mb-0-mb">INITIAL <br class="hide-on-mobile"> COST OUTLAY</h3>
                 </div>
                 <div class="block-image pb-60 pb-0-mb">
