--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -207,6 +207,10 @@
     max-width: 520px;
     flex: 0 0 30%;
 
+    @media (max-width: 1024px) {
+        flex: 0 0 50%;
+    }
+
     @media (max-width: 767px) {
         max-width: 100%;
     }
